--- a/assets/style.css
+++ b/assets/style.css
@@ -28,8 +28,8 @@ figure > img.screenshot:not(.full-width) {
 }
 
 /* Code blocks */
-.highlight pre,
-pre {
+.markdown-body .highlight pre,
+.markdown-body pre {
   background: #000000c7;
   color: #c9d1d9;
   font-family: 'Fira Code', 'JetBrains Mono', 'Courier New', monospace;
@@ -42,8 +42,8 @@ pre {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   position: relative;
 }
-pre::after,
-pre.highlight::after {
+.markdown-body .highlight pre::after,
+.markdown-body pre::after {
   content: "Code";
   position: absolute;
   top: 0;
