--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+body {
+    max-width: 900px;
+    margin: auto;
+}
+
 /* Hide the default GitHub page title (repo name) */
 .markdown-body > h1:first-child,
 .markdown-body::before {
