--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
-  max-width: 900px;
   margin: auto;
+  max-width: 900px;
 }
 
 .page-title {
@@ -9,10 +9,10 @@ body {
 
 .page-subtitle {
   border: none;
-  margin-top: 0.4em;
+  color: #555;
   font-style: italic;
   font-weight: normal;
-  color: #555;
+  margin-top: 0.4em;
 }
 
 /* Hide the default GitHub page title (repo name) */
@@ -23,13 +23,13 @@ body {
 
 /* Display images with caption */
 figure > img {
-  display: block;
-  max-width: 100%;
-  margin: 2rem auto 1rem;
+  background: #f6f8fa;
   border: 1px solid #d0d7de;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-  background: #f6f8fa;
+  display: block;
+  margin: 2rem auto 1rem;
+  max-width: 100%;
   padding: 0.5rem;
 }
 figure {
@@ -37,8 +37,8 @@ figure {
   text-align: center;
 }
 figcaption {
-  font-size: 0.95rem;
   color: #6a737d;
+  font-size: 0.95rem;
   margin-top: 0.5rem;
 }
 figure > img.screenshot:not(.full-width) {
@@ -49,30 +49,44 @@ figure > img.screenshot:not(.full-width) {
 .markdown-body .highlight pre,
 .markdown-body pre {
   background: #000000c7;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   color: #c9d1d9;
   font-family: "Fira Code", "JetBrains Mono", "Courier New", monospace;
   font-size: 0.9rem;
   line-height: 1.6;
-  padding: 1.25rem 1.25rem;
-  border-radius: 10px;
-  overflow-x: auto;
   margin: 1.5rem 0;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  overflow-x: auto;
+  padding: 1.25rem 1.25rem;
   position: relative;
 }
 .markdown-body .highlight pre::after,
 .markdown-body pre::after {
+  background: #626262a6;
+  border-bottom-right-radius: 6px;
+  color: white;
   content: "Code";
-  position: absolute;
-  top: 0;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 0.7rem;
   left: 0;
   padding: 0.15rem 0.6rem 0.1rem 0.8rem;
-  font-size: 0.7rem;
-  background: #626262a6;
-  color: white;
-  border-bottom-right-radius: 6px;
-  font-family: sans-serif;
+  position: absolute;
+  top: 0;
 }
+.markdown-body .highlight pre:hover::after,
+.markdown-body pre:hover::after {
+  color: yellow;
+}
+
+pre.copied {
+  opacity: 0.8;
+  border: 1px solid rgba(255, 255, 0, 0.253);
+}
+pre.copied::after {
+  content: "Copied!";
+}
+/** adjust code colors for better visibility **/
 pre .k,
 pre.highlight .k,
 pre .kd,
